--- a/.github/workflows/main_rbt-backend.yml
+++ b/.github/workflows/main_rbt-backend.yml
@@ -1,62 +1,69 @@
-# Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
-# More GitHub Actions for Azure: https://github.com/Azure/actions
-
-name: Build and deploy Node.js app to Azure Web App - rbt-backend
+name: Build and deploy backend server
 
 on:
-  push:
-    branches:
-      - main
-  workflow_dispatch:
+    push:
+        branches:
+            - main
+    workflow_dispatch:
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
+    build:
+        runs-on: ubuntu-latest
 
-    steps:
-      - uses: actions/checkout@v4
+        steps:
+            - uses: actions/checkout@v4
 
-      - name: Set up Node.js version
-        uses: actions/setup-node@v3
-        with:
-          node-version: '18.x'
+            - name: Set up Node.js version
+              uses: actions/setup-node@v3
+              with:
+                  node-version: "18.x"
 
-      - name: npm install, build, and test
-        run: |
-          npm install
-          npm run build --if-present
-          npm run test --if-present
+            # Install root dependencies first
+            - name: Install root dependencies
+              run: npm install
 
-      - name: Zip artifact for deployment
-        run: zip release.zip ./* -r
+            # Install backend dependencies
+            - name: Install backend dependencies
+              run: npm install --workspaces=false
+              working-directory: express-backend
 
-      - name: Upload artifact for deployment job
-        uses: actions/upload-artifact@v3
-        with:
-          name: node-app
-          path: release.zip
+            # Build backend if needed
+            - name: Build backend
+              run: npm run build --if-present
+              working-directory: express-backend
 
-  deploy:
-    runs-on: ubuntu-latest
-    needs: build
-    environment:
-      name: 'Production'
-      url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
+            # Zip the backend directory for deployment
+            - name: Zip artifact for deployment
+              run: zip release.zip ./* -r
+              working-directory: express-backend
 
-    steps:
-      - name: Download artifact from build job
-        uses: actions/download-artifact@v3
-        with:
-          name: node-app
+            - name: Upload artifact for deployment job
+              uses: actions/upload-artifact@v3
+              with:
+                  name: node-app
+                  path: express-backend/release.zip
 
-      - name: Unzip artifact for deployment
-        run: unzip release.zip
+    deploy:
+        runs-on: ubuntu-latest
+        needs: build
+        environment:
+            name: "Production"
+            url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
 
-      - name: 'Deploy to Azure Web App'
-        id: deploy-to-webapp
-        uses: azure/webapps-deploy@v2
-        with:
-          app-name: 'rbt-backend'
-          slot-name: 'Production'
-          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_BD318EB69BE847CBB35027C4343D2A37 }}
-          package: .
+        steps:
+            - name: Download artifact from build job
+              uses: actions/download-artifact@v3
+              with:
+                  name: node-app
+
+            - name: Unzip artifact for deployment
+              run: unzip release.zip
+
+            - name: "Deploy to Azure Web App"
+              id: deploy-to-webapp
+              uses: azure/webapps-deploy@v2
+              with:
+                  app-name: "rbt-backend"
+                  slot-name: "Production"
+                  publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX }}
+                  package: .
