--- a/react-frontend/public/manifest.json
+++ b/react-frontend/public/manifest.json
@@ -53,8 +53,8 @@
     ],
     "start_url": "/",
     "display": "standalone",
-    "background_color": "#ffffff",
-    "theme_color": "#000000",
+    "background_color": "#f5f5f5",
+    "theme_color": "#f5f5f5",
     "orientation": "portrait",
     "scope": "/",
     "categories": ["lifestyle", "productivity"],
