--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "devDependencies": {
         "@eslint/js": "^9.20.0",
         "concurrently": "^6.2.0",
+        "cypress": "^14.1.0",
         "eslint": "^9.20.1",
         "eslint-plugin-react": "^7.37.4",
         "globals": "^15.14.0",
