--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@
 # dependencies
 /node_modules
 /.env
-/cypress/.env
+/cypress.config.js
 /react-frontend/node_modules
 /react-frontend/build
 /express-backend/node_modules
